--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-Hello World
+---
+layout: default
+title: Journal Square Community Association
+---
+
+<section id="banner">
+  <div class="content"></div>
+  
+</section>
+
+
+<section class="home" id="about">
+  <div class="content">{% include home/about.html %}</div>
+  <!-- {% include divider.html color1="rgb(238, 238, 238)" color2="rgb(250, 175, 58)" direction="down" %} -->
+  {% include divider.html color1="--white" color2="--yellow-bright" direction="down" %}
+</section>
+
+<section id="get_involved" class="home">
+  <div class="content">{% include home/get_involved.html %}</div>
+  {% include divider.html color1="--green-bright" color2="--yellow-bright" direction="up" %}
+</section>
+
+<section id="committees" class="home">
+  <div class="content">{% include home/committees.html %}</div>
+  {% include divider.html color1="--green-bright" color2="--purple-bright" direction="down" %}
+
+</section>
+
+<section id="resources" class="home">
+  <div class="content">{% include home/resources.html %}</div>
+  {% include divider.html color1="--black" color2="--purple-bright" direction="up" %}
+</section>
