--- a/accomplishments.html
+++ b/accomplishments.html
@@ -4,7 +4,7 @@ title: Accomplishments
 permalink: /accomplishments
 ---
 
-<p>The Journal Square Community Association has worked to improve our neighborhood through advocacy, partnerships, and direct action.</p>
+<p>The Journal Square Community Association has worked to improve our neighborhood through advocacy, partnerships, and direct action. Here are some highlights.</p>
 
 <ul class="accomplishments-list">
   <li>
