--- a/bergen-arches.html
+++ b/bergen-arches.html
@@ -6,6 +6,8 @@ permalink: /bergen-arches
 
 <p>The Bergen Arches is a mile-long, below-grade rail corridor running through the heart of Ward C &mdash; and it's on its way to becoming one of Jersey City's most significant green spaces. The JSQCA has been an active supporter of this project since its early days.</p>
 
+<img src="https://picsum.photos/seed/bergen-arches/1200/400" alt="Bergen Arches corridor placeholder" class="about-photo" loading="lazy" />
+
 <h2>What Are the Bergen Arches?</h2>
 <p>The Bergen Arches (formally the "Erie Cut") is an abandoned four-track railroad trench blasted through Bergen Hill between 1906 and 1910 by the Erie Railroad. The cut runs roughly from Palisade Avenue (near the Heights) to Tonnelle Avenue/Route 1&9, passing between the Journal Square and Heights neighborhoods.</p>
 <p>Six arched bridges and tunnels were built along its length to keep intersecting streets intact &mdash; giving the corridor its name. At its deepest, the trench sits 40 to 85 feet below street level and spans approximately 60 feet wide, covering about 17 acres.</p>
@@ -24,9 +26,11 @@ permalink: /bergen-arches
 </ul>
 <p>The Bergen Arches would also serve as a critical link connecting the <a href="https://greenway.org/">East Coast Greenway</a> (a national trail from Maine to Florida), the <strong>Essex-Hudson Greenway</strong> (a 9-mile car-free pathway connecting 8 communities from Montclair to Jersey City), and the <strong>Sixth Street Embankment</strong> greenway toward the Jersey City waterfront.</p>
 
-<h2>Current Status</h2>
-<p>The <strong>Bergen Arches Greenway &amp; Transit Feasibility Study</strong>, commissioned by Jersey City's Department of Infrastructure and conducted by Supermass Studio, Arup, and NHDM, was completed in 2024. It was funded by a $100,000 state grant and won a <strong>2025 ASLA-NY Honor Award</strong>. The full study is available at the <a href="https://bergenarchesstudy-jerseycity.hub.arcgis.com/">Bergen Arches Feasibility Study Hub</a>.</p>
-<p>In 2025, NJ Transit announced a <strong>$22.28 million Phase 2 design contract</strong> for a Bus Rapid Transit Transitway from Secaucus to Jersey City that would use the Bergen Arches corridor. Community advocates, including BAPC, are pushing for <strong>coexistence of greenway and transit uses</strong> within the corridor.</p>
+<div class="callout callout--green">
+  <h2>Current Status</h2>
+  <p>The <strong>Bergen Arches Greenway &amp; Transit Feasibility Study</strong>, commissioned by Jersey City's Department of Infrastructure and conducted by Supermass Studio, Arup, and NHDM, was completed in 2024. It was funded by a $100,000 state grant and won a <strong>2025 ASLA-NY Honor Award</strong>. The full study is available at the <a href="https://bergenarchesstudy-jerseycity.hub.arcgis.com/">Bergen Arches Feasibility Study Hub</a>.</p>
+  <p>In 2025, NJ Transit announced a <strong>$22.28 million Phase 2 design contract</strong> for a Bus Rapid Transit Transitway from Secaucus to Jersey City that would use the Bergen Arches corridor. Community advocates, including BAPC, are pushing for <strong>coexistence of greenway and transit uses</strong> within the corridor.</p>
+</div>
 
 <h3>Upcoming Milestones</h3>
 <ul>
@@ -36,16 +40,18 @@ permalink: /bergen-arches
   <li><strong>Summer 2030:</strong> Palisade Avenue bridge replacement (estimated)</li>
 </ul>
 
-<h2>Key Facts</h2>
-<ul>
-  <li><strong>Length:</strong> ~1 mile (corridor extends ~1.75 miles with adjacent right-of-way)</li>
-  <li><strong>Depth:</strong> 40&ndash;85 feet below street level</li>
-  <li><strong>Area:</strong> ~17 acres</li>
-  <li><strong>Built:</strong> 1906&ndash;1910 by the Erie Railroad</li>
-  <li><strong>Last train:</strong> 1957</li>
-  <li><strong>Current owner:</strong> NJ Transit (primary), Conrail, NJDOT</li>
-  <li><strong>Feasibility study:</strong> Completed 2024, won 2025 ASLA-NY Honor Award</li>
-</ul>
+<div class="callout">
+  <h2>Key Facts</h2>
+  <ul>
+    <li><strong>Length:</strong> ~1 mile (corridor extends ~1.75 miles with adjacent right-of-way)</li>
+    <li><strong>Depth:</strong> 40&ndash;85 feet below street level</li>
+    <li><strong>Area:</strong> ~17 acres</li>
+    <li><strong>Built:</strong> 1906&ndash;1910 by the Erie Railroad</li>
+    <li><strong>Last train:</strong> 1957</li>
+    <li><strong>Current owner:</strong> NJ Transit (primary), Conrail, NJDOT</li>
+    <li><strong>Feasibility study:</strong> Completed 2024, won 2025 ASLA-NY Honor Award</li>
+  </ul>
+</div>
 
 <h2>Key Organizations</h2>
 <ul>
