--- a/board-officers.html
+++ b/board-officers.html
@@ -63,5 +63,7 @@ permalink: /board-officers
   </div>
 </div>
 
-<h2>Get Involved in Leadership</h2>
-<p>Board elections are held annually and are open to all JSQCA members in good standing. Interested in running or learning more about how the board operates? Attend a monthly meeting or review our <a href="/static/pdf/bylaws.pdf" target="_blank">bylaws</a>.</p>
+<div class="callout callout--purple">
+  <h2>Get Involved in Leadership</h2>
+  <p>Board elections are held annually and are open to all JSQCA members in good standing. Interested in running or learning more about how the board operates? Attend a monthly meeting or review our <a href="/static/pdf/bylaws.pdf" target="_blank">bylaws</a>.</p>
+</div>
