--- a/donate.html
+++ b/donate.html
@@ -8,7 +8,9 @@ permalink: /donate
 
 <p>These costs include sponsored events such as debates and historical walking tours, light refreshments at monthly meetings, and community social events. Aside from membership dues, the Association has no other revenue streams. Any donation would go a long way toward increasing events, activities, and programming that the JSQCA can provide to the community.</p>
 
-<p>Donations are processed securely through Stripe. All contributions are tax-deductible.</p>
+<div class="callout callout--green">
+  <p>Donations are processed securely through Stripe. All contributions are <strong>tax-deductible</strong> as the JSQCA is a registered 501(c)(3) organization.</p>
+</div>
 
 <div style="margin-top: 2rem;">
   <!-- TODO: Replace href with your Stripe donation link (e.g. https://donate.stripe.com/your-link) -->
