--- a/gallery.html
+++ b/gallery.html
@@ -6,15 +6,37 @@ permalink: /gallery
 
 <p>A look at Journal Square through the eyes of our community.</p>
 
-<h2>Past Photos</h2>
-<div class="gallery-grid">
-  <!-- Add images by placing files in /static/img/gallery/ and adding items here:
-  <a class="gallery-item" href="/static/img/gallery/example.jpg" target="_blank">
-    <img src="/static/img/gallery/example.jpg" alt="Description" loading="lazy" />
-  </a>
-  -->
+<div class="gallery-notice">
+  We're building our community photo gallery! Real photos from Journal Square events and landmarks are coming soon. Want to contribute? Reach out to us at a monthly meeting or on social media.
 </div>
-<p><em>Pictures courtesy our community members.</em></p>
+
+<h2>Journal Square</h2>
+<div class="gallery-grid">
+  <div class="gallery-item">
+    <img src="https://picsum.photos/seed/jsq-park/600/400" alt="Community park placeholder" loading="lazy" />
+    <div class="caption">Community green spaces</div>
+  </div>
+  <div class="gallery-item">
+    <img src="https://picsum.photos/seed/jsq-street/600/400" alt="Street scene placeholder" loading="lazy" />
+    <div class="caption">Journal Square streetscape</div>
+  </div>
+  <div class="gallery-item">
+    <img src="https://picsum.photos/seed/jsq-mural/600/400" alt="Public art placeholder" loading="lazy" />
+    <div class="caption">Public art and murals</div>
+  </div>
+  <div class="gallery-item">
+    <img src="https://picsum.photos/seed/jsq-event/600/400" alt="Community event placeholder" loading="lazy" />
+    <div class="caption">Community events</div>
+  </div>
+  <div class="gallery-item">
+    <img src="https://picsum.photos/seed/jsq-transit/600/400" alt="Transit hub placeholder" loading="lazy" />
+    <div class="caption">Journal Square Transportation Center</div>
+  </div>
+  <div class="gallery-item">
+    <img src="https://picsum.photos/seed/jsq-historic/600/400" alt="Historic building placeholder" loading="lazy" />
+    <div class="caption">Historic architecture</div>
+  </div>
+</div>
 
 <h2>Share Your Photos</h2>
 <p>Have photos of Journal Square you'd like to share? Bring them to a monthly meeting or reach out to us on <a href="https://www.instagram.com/jsqca/">Instagram</a> or <a href="https://www.facebook.com/jsqca/">Facebook</a>.</p>
