--- a/membership.html
+++ b/membership.html
@@ -6,11 +6,15 @@ permalink: /membership
 
 <p>Join the Journal Square Community Association and help make our neighborhood cleaner, greener, and safer. The JSQCA is a registered 501(c)(3), so membership cost is tax deductible.</p>
 
-<h2>Individual Membership &ndash; $25/year</h2>
-<p>Membership affords you a vote in board elections, statements of support or protest being offered by the organization, as well as any other formal votes that impact the direction and affiliations of the organization. Membership must be renewed every calendar year.</p>
+<div class="callout callout--green">
+  <h2>Individual Membership &ndash; $25/year</h2>
+  <p>Membership affords you a vote in board elections, statements of support or protest being offered by the organization, as well as any other formal votes that impact the direction and affiliations of the organization. Membership must be renewed every calendar year.</p>
+</div>
 
-<h2>Business Membership &ndash; $100/year</h2>
-<p>Businesses located in the Journal Square area can join the JSQCA as members. Benefits include networking opportunities, increased promotion for your services or products, active participation in community events, access to meeting updates and essential materials, and the satisfaction of contributing to the enhancement of Journal Square.</p>
+<div class="callout callout--purple">
+  <h2>Business Membership &ndash; $100/year</h2>
+  <p>Businesses located in the Journal Square area can join the JSQCA as members. Benefits include networking opportunities, increased promotion for your services or products, active participation in community events, access to meeting updates and essential materials, and the satisfaction of contributing to the enhancement of Journal Square.</p>
+</div>
 
 <div class="form-tabs">
   <button class="active" onclick="switchTab('individual')">Individual Membership</button>
