--- a/safety.html
+++ b/safety.html
@@ -6,16 +6,18 @@ permalink: /safety
 
 <p>Keeping Journal Square safe is a core part of the JSQCA's mission. Below you'll find emergency contacts, crime reporting resources, and information on pedestrian, bike, and community safety programs.</p>
 
-<h2>Emergency Contacts</h2>
-<ul>
-  <li><strong>Emergency (Police/Fire/EMS):</strong> 911</li>
-  <li><strong>JCPD Non-Emergency Dispatch:</strong> (201) 547-5477</li>
-  <li><strong>JCPD Anonymous Tip Line:</strong> 855-JCP-TIPS (855-527-8477)</li>
-  <li><strong>JCPD Anonymous Tip Email:</strong> policetips@njjcps.org  </li>
-  <li><strong>Jersey City Fire Dept (non-emergency):</strong> (201) 547-4255</li>
-  <li><strong>Resident Response Center (city services):</strong> (201) 547-4900</li>
-  <li><strong>Hudson County Prosecutor Anonymous Tips:</strong> 800-962-0056</li>
-</ul>
+<div class="callout">
+  <h2>Emergency Contacts</h2>
+  <ul>
+    <li><strong>Emergency (Police/Fire/EMS):</strong> 911</li>
+    <li><strong>JCPD Non-Emergency Dispatch:</strong> (201) 547-5477</li>
+    <li><strong>JCPD Anonymous Tip Line:</strong> 855-JCP-TIPS (855-527-8477)</li>
+    <li><strong>JCPD Anonymous Tip Email:</strong> policetips@njjcps.org  </li>
+    <li><strong>Jersey City Fire Dept (non-emergency):</strong> (201) 547-4255</li>
+    <li><strong>Resident Response Center (city services):</strong> (201) 547-4900</li>
+    <li><strong>Hudson County Prosecutor Anonymous Tips:</strong> 800-962-0056</li>
+  </ul>
+</div>
 
 <h2>Report a Crime</h2>
 <p>For crimes in progress, always call <strong>911</strong>. To report a crime after the fact or provide an anonymous tip, use the JCPD Tip Line at <strong>855-JCP-TIPS</strong> or email <strong>policetips@njjcps.org</strong>.</p>
@@ -53,6 +55,8 @@ permalink: /safety
   <li><a href="https://www.facebook.com/groups/JerseyCityCERTPublic/" target="_blank">Community Emergency Response Team (CERT)</a> &ndash; Volunteer to help prepare for and respond to emergencies like flooding, snowstorms, and power outages.</li>
 </ul>
 
-<h2>Get Involved</h2>
-<p>If you have safety concerns in Journal Square, attend one of our monthly meetings. We can connect you with the right city departments and advocacy organizations.</p>
-<p>Meetings are held on the second Monday of every month at 7 PM at 71 Sip Ave., 6th Floor, Jersey City.</p>
+<div class="callout callout--green">
+  <h2>Get Involved</h2>
+  <p>If you have safety concerns in Journal Square, attend one of our monthly meetings. We can connect you with the right city departments and advocacy organizations.</p>
+  <p>Meetings are held on the <strong>second Monday of every month at 7 PM</strong> at 71 Sip Ave., 6th Floor, Jersey City.</p>
+</div>
