--- a/vision.html
+++ b/vision.html
@@ -22,11 +22,13 @@ title: Our Vision
   Membership is open to all residents of Jersey City, owners of residential
   property, and businesses within the boundaries set forth in our by-laws. The
   JSQCA is recognized by the IRS as a 501(c)(3) organization, so member dues
-  and donations are tax-deductible. We normally meet from 7 PM to 9 PM on the
-  second Monday of the month. Our meetings are held at
-  71 Sip Ave., 6th Floor. Our meetings are also
-  streamed via Facebook.
+  and donations are tax-deductible.
 </p>
+
+<div class="callout callout--yellow">
+  <h2>Monthly Meetings</h2>
+  <p>We normally meet from <strong>7 PM to 9 PM on the second Monday of the month</strong> at 71 Sip Ave., 6th Floor. Our meetings are also streamed via Facebook.</p>
+</div>
 
 <p>
   In addition to monthly meetings, members can join committees that address
@@ -34,4 +36,4 @@ title: Our Vision
   about our committees</a>.
 </p>
 
-<p>Interested in attending a meeting or becoming a member? <a href="/membership">Join us today</a>.</p>
+<p>Interested in attending a meeting or becoming a member? <a href="/membership" class="cta-button">Join us today</a></p>
