--- a/clean-streets.html
+++ b/clean-streets.html
@@ -6,13 +6,15 @@ permalink: /clean-streets
 
 <p>A clean Journal Square starts with each of us. Below you'll find resources for reporting issues, trash and recycling guidelines, and ways to get involved in keeping our neighborhood beautiful.</p>
 
-<h2>Report an Issue</h2>
-<p>See something that needs attention? Here's how to report it:</p>
-<ul>
-  <li><a href="https://seeclickfix.com/jersey-city" target="_blank">SeeClickFix</a> &ndash; Jersey City's primary tool for reporting potholes, graffiti, illegal dumping, broken streetlights, overflowing trash, and other quality-of-life issues. Available online and on mobile.</li>
-  <li><strong>Resident Response Center:</strong> (201) 547-4900 &ndash; Jersey City's one-stop office for city services, Monday&ndash;Friday 9 AM&ndash;5 PM.</li>
-  <li><strong>Office of Code Compliance</strong> &ndash; For property maintenance violations including unkempt lots, accumulated trash, and building code issues.</li>
-</ul>
+<div class="callout callout--yellow">
+  <h2>Report an Issue</h2>
+  <p>See something that needs attention? Here's how to report it:</p>
+  <ul>
+    <li><a href="https://seeclickfix.com/jersey-city" target="_blank">SeeClickFix</a> &ndash; Jersey City's primary tool for reporting potholes, graffiti, illegal dumping, broken streetlights, overflowing trash, and other quality-of-life issues. Available online and on mobile.</li>
+    <li><strong>Resident Response Center:</strong> (201) 547-4900 &ndash; Jersey City's one-stop office for city services, Monday&ndash;Friday 9 AM&ndash;5 PM.</li>
+    <li><strong>Office of Code Compliance</strong> &ndash; For property maintenance violations including unkempt lots, accumulated trash, and building code issues.</li>
+  </ul>
+</div>
 
 <h2>Trash &amp; Recycling</h2>
 <p>Look up your collection schedule on the <a href="https://data.jerseycitynj.gov/explore/dataset/garbage-collection-map/table/" target="_blank">Garbage Collection Map</a> or visit the <a href="https://www.jerseycitynj.gov/CityHall/DPW/Sanitation" target="_blank">DPW Sanitation page</a>.</p>
@@ -56,6 +58,8 @@ permalink: /clean-streets
   <li><a href="https://www.hcia.org/" target="_blank">Hudson County Improvement Authority</a> &ndash; County-level recycling programs and resources.</li>
 </ul>
 
-<h2>Get Involved</h2>
-<p>Have concerns about cleanliness in Journal Square? Attend one of our monthly meetings to raise issues and connect with fellow residents working to keep our neighborhood clean.</p>
-<p>Meetings are held on the second Monday of every month at 7 PM at 71 Sip Ave., 6th Floor, Jersey City.</p>
+<div class="callout callout--green">
+  <h2>Get Involved</h2>
+  <p>Have concerns about cleanliness in Journal Square? Attend one of our monthly meetings to raise issues and connect with fellow residents working to keep our neighborhood clean.</p>
+  <p>Meetings are held on the <strong>second Monday of every month at 7 PM</strong> at 71 Sip Ave., 6th Floor, Jersey City.</p>
+</div>
