--- a/index.html
+++ b/index.html
@@ -4,29 +4,34 @@ title: Journal Square Community Association
 ---
 
 <section id="banner">
-  <div class="content"></div>
-  
+  <div class="content">
+    <div class="banner-overlay">
+      <h1>Working together for a cleaner, greener, safer Journal Square</h1>
+      <p>Join your neighbors in building a better community. Meetings are open to everyone, the second Monday of every month.</p>
+      <a href="/membership" class="cta-hero">Join Us</a>
+    </div>
+  </div>
 </section>
 
 
 <section class="home" id="about">
   <div class="content">{% include home/about.html %}</div>
   <!-- {% include divider.html color1="rgb(238, 238, 238)" color2="rgb(250, 175, 58)" direction="down" %} -->
-  {% include divider.html color1="--white" color2="--yellow-bright" direction="down" %}
+  {% include divider.html color1="--white" color2="--yellow-muted" direction="down" %}
 </section>
 
 <section id="get_involved" class="home">
   <div class="content">{% include home/get_involved.html %}</div>
-  {% include divider.html color1="--green-bright" color2="--yellow-bright" direction="up" %}
+  {% include divider.html color1="--green-muted" color2="--yellow-muted" direction="up" %}
 </section>
 
 <section id="committees" class="home">
   <div class="content">{% include home/committees.html %}</div>
-  {% include divider.html color1="--green-bright" color2="--purple-bright" direction="down" %}
+  {% include divider.html color1="--green-muted" color2="--purple-muted" direction="down" %}
 
 </section>
 
 <section id="resources" class="home">
   <div class="content">{% include home/resources.html %}</div>
-  {% include divider.html color1="--black" color2="--purple-bright" direction="up" %}
+  {% include divider.html color1="--black" color2="--purple-muted" direction="up" %}
 </section>
