--- a/tenants-rights.html
+++ b/tenants-rights.html
@@ -20,6 +20,8 @@ permalink: /tenants-rights
   <li>Landlord Accountability resources</li>
 </ul>
 
-<h2>Need Help?</h2>
-<p>If you are experiencing issues with your landlord or have questions about your rights as a tenant, attend one of our monthly meetings. We can connect you with legal resources and advocacy organizations that can help.</p>
-<p>Meetings are held on the second Monday of every month at 7 PM at 71 Sip Ave., 6th Floor, Jersey City.</p>
+<div class="callout callout--purple">
+  <h2>Need Help?</h2>
+  <p>If you are experiencing issues with your landlord or have questions about your rights as a tenant, attend one of our monthly meetings. We can connect you with legal resources and advocacy organizations that can help.</p>
+  <p>Meetings are held on the <strong>second Monday of every month at 7 PM</strong> at 71 Sip Ave., 6th Floor, Jersey City.</p>
+</div>
