--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Journal Square Community Association
 ---
 
-<section id="banner">
+<section id="banner" class="reveal">
   <div class="content">
     <div class="banner-overlay">
       <h1>Working together for a cleaner, greener, safer Journal Square</h1>
@@ -13,18 +13,18 @@ title: Journal Square Community Association
   </div>
 </section>
 
-<section class="home" id="about">
+<section class="home reveal" id="about">
   <div class="content">{% include home/about.html %}</div>
 </section>
 
-<section id="get_involved" class="home">
+<section id="get_involved" class="home reveal">
   <div class="content">{% include home/get_involved.html %}</div>
 </section>
 
-<section id="committees" class="home">
+<section id="committees" class="home reveal">
   <div class="content">{% include home/committees.html %}</div>
 </section>
 
-<section id="resources" class="home">
+<section id="resources" class="home reveal">
   <div class="content">{% include home/resources.html %}</div>
 </section>
